--- a/index.html
+++ b/index.html
@@ -1,29 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Webstudio</h1>
+  </head>
+  <body>
+    <!-- Header-->
     <header>
-
-        <a href="WEBSTUDIO"></a>
-
+      <nav>
+        <a href="./index.html"> WEB </a>
+        <a href="./index.html"> STUDIO </a>
+        <ul>
+          <li>
+            <a href="http://"> Studio</a></li>
+          <li>
+            <a href="http://"> Portfolio</a></li>
+          <li>
+            <a href="http://"> Contacts</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="http://"> info@devstudio.com</a></li>
+        <li><a href="http://"> +11 (000) 111-11-11</a></li>
+      </ul>
     </header>
-
+    <!-- Main-->
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-    </main>
+    <!-- Order Service-->
+    <div>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
+      </section>
+    </div>
+    <!-- What are we doing-->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Примеры работ-->
+      <section>
+        <h2>примеры работ</h2>
+        <ul>
+          <li>
+            <img src="./images/img-1.jpg" alt="img-1" width="360">
+          </li>
+          <li>
+            <img src="./images/img-2.jpg" alt="img-1" width="360">
+          </li>
+          <li>
+            <img src="./images/img-3.jpg" alt="img-1" width="360">
+          </li>
+        </ul>
+      </section>
+      <!-- Our Team-->
+      <section>
+        <h2>
+            Our Team
+        </h2>
+        <ul>
+            <li>
+                <img src="./images/Team-card-1.jpg" alt="Team-card-1" width="264" >
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/Team-card-2.jpg" alt="Team-card-2" width="264" >
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/Team-card-3.jpg" alt="Team-card-3" width="264" >
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/Team-card-4.jpg" alt="Team-card-4" width="264" >
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+      </section>
+    </main>        
+    <!-- Footer-->
+    <footer>
 
-    <footer></footer>
-
-</body>
+    </footer>
+  </body>
 </html>
