--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <a href="./index.html"> STUDIO </a>
         <ul>
           <li>
-            <a href="http://"> Studio</a></li>
+            <a href="./index.html"> Studio</a></li>
           <li>
-            <a href="http://"> Portfolio</a></li>
+            <a href="./index.html"> Portfolio</a></li>
           <li>
-            <a href="http://"> Contacts</a></li>
+            <a href="./index.html"> Contacts</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="http://"> info@devstudio.com</a></li>
-        <li><a href="http://"> +11 (000) 111-11-11</a></li>
+        <li><a href="./index.html"> info@devstudio.com</a></li>
+        <li><a href="./index.html"> +11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <!-- Main-->
