--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- Header-->
     <header>
       <nav>
-        <a href="./index.html"> WEB </a>
-        <a href="./index.html"> STUDIO </a>
+        <a href="./index.html"> WEBSTUDIO </a>
         <ul>
           <li>
             <a href="./index.html"> Studio</a></li>
