--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="./index.html"> info@devstudio.com</a></li>
-        <li><a href="./index.html"> +11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li> 
+        <li><a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <!-- Main-->
