--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header-->
     <header>
       <nav>
-        <a href="./index.html"> WEBSTUDIO </a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li>
             <a href="./index.html"> Studio</a></li>
@@ -21,8 +21,10 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li> 
-        <li><a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a></li>
+        <address>
+          <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a>
+        </address>
       </ul>
     </header>
     <!-- Main-->
