--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Order Service-->
     <div>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <h1> Effective Solutions for Your Business</h1>
+        <button type="button"> Order Service</button>
       </section>
     </div>
     <!-- What are we doing-->
