--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Header-->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html"> WEBSTUDIO</a>
         <ul>
           <li>
-            <a href="./index.html"> Studio</a></li>
+            <a href=""> Studio</a></li>
           <li>
-            <a href="./index.html"> Portfolio</a></li>
+            <a href=""> Portfolio</a></li>
           <li>
-            <a href="./index.html"> Contacts</a></li>
+            <a href=""> Contacts</a></li>
         </ul>
       </nav>
         <address>
