--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!-- Header-->
     <header>
+      <a href="./index.html"> WebStudio</a>
       <nav>
-        <a href="./index.html"> WEBSTUDIO</a>
         <ul>
           <li>
             <a href=""> Studio</a></li>
@@ -21,8 +21,14 @@
         </ul>
       </nav>
         <address>
-          <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
-          <a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a>
+            </li>
+          </ul>
         </address>
     </header>
     <!-- Main-->
