--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!-- Header-->
     <header>
-      <a href="./index.html"> WebStudio</a>
       <nav>
+        <a href="./index.html"> WebStudio</a>
         <ul>
           <li>
             <a href=""> Studio</a></li>
@@ -26,7 +26,7 @@
               <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
             </li>
             <li>
-              <a href="href=”tel:+110001111111"> +11 (000) 111-11-11</a>
+              <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
