--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <!-- Order Service-->
     <div>
       <section>
+        <div>
+          <h1> Effective Solutions for Your Business</h1>
+          <button type="button"> Order Service</button>
+        </div> 
         <h1> Effective Solutions for Your Business</h1>
         <button type="button"> Order Service</button>
       </section>
