--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <section>
         <div>
           <h1> Effective Solutions for Your Business</h1>
+          <iframe src="" frameborder="0">Effective Solutions for Your Business</iframe>
           <button type="button"> Order Service</button>
         </div> 
         <h1> Effective Solutions for Your Business</h1>
@@ -124,7 +125,9 @@
     </main>        
     <!-- Footer-->
     <footer>
-
+        <nav>
+          <a href="./index.html"> WebStudio</a>
+        </nav>
     </footer>
   </body>
 </html>
