--- a/index.html
+++ b/index.html
@@ -34,17 +34,13 @@
     <!-- Main-->
     <main>
     <!-- Order Service-->
-    <div>
       <section>
         <div>
           <h1> Effective Solutions for Your Business</h1>
-          <iframe src="" frameborder="0">Effective Solutions for Your Business</iframe>
+          <iframe src="" frameborder=""> Effective Solutions for Your Business</iframe>
           <button type="button"> Order Service</button>
         </div> 
-        <h1> Effective Solutions for Your Business</h1>
-        <button type="button"> Order Service</button>
       </section>
-    </div>
     <!-- What are we doing-->
       <section>
         <h2>What are we doing</h2>
@@ -125,9 +121,18 @@
     </main>        
     <!-- Footer-->
     <footer>
-        <nav>
-          <a href="./index.html"> WebStudio</a>
-        </nav>
+      <ul>
+        <li>
+          <nav>
+            <a href="./index.html"> WebStudio</a>
+          </nav>
+        </li>
+        <li>
+          <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          </p>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
