--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <section>
         <div>
           <h1> Effective Solutions for Your Business</h1>
-          <iframe src="" frameborder=""> Effective Solutions for Your Business</iframe>
+          <span> Effective Solutions for Your Business </span>
           <button type="button"> Order Service</button>
+          <span> Order Service</span>
         </div> 
       </section>
     <!-- What are we doing-->
