--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
           <h1> Effective Solutions for Your Business</h1>
           <span> Effective Solutions for Your Business </span>
           <button type="button"> Order Service</button>
-          <span> Order Service</span>
         </div> 
       </section>
     <!-- What are we doing-->
@@ -126,6 +125,7 @@
         <li>
           <nav>
             <a href="./index.html"> WebStudio</a>
+            <span> WebStudio</span>
           </nav>
         </li>
         <li>
