--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         <div>
           <h1> Effective Solutions for Your Business</h1>
           <span> Effective Solutions for Your Business </span>
+        </div> 
+        <div>   
           <button type="button"> Order Service</button>
+           <span> Order Service</span>
         </div> 
       </section>
     <!-- What are we doing-->
       <section>
         <h2>What are we doing</h2>
+        <span> What are we doing</span>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -121,14 +125,8 @@
     </main>        
     <!-- Footer-->
     <footer>
-      <ul>
-        <li>
-          <nav>
-            <a href="./index.html"> WebStudio</a>
+          <a href="./index.html"> WebStudio</a>
             <span> WebStudio</span>
-          </nav>
-        </li>
-        <li>
           <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
           </p>
