--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div> 
         <div>   
           <button type="button"> Order Service</button>
-          <span> Order Service</span>
+          <div> Order Service</div>
         </div> 
       </section>
     <!-- What are we doing-->
