--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
           <h1> Effective Solutions for Your Business</h1>
           <span> Effective Solutions for Your Business </span>
         </div> 
-        <div>   
-          <button type="button"> Order Service</button>
-          <div> Order Service</div>
-        </div> 
+        <button type="button"> Order Service</button>
+        <span> Order Service</span>
+       
       </section>
     <!-- What are we doing-->
       <section>
