--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         </div> 
         <button type="button"> Order Service</button>
       </section>
-    <!-- What are we doing-->
+    <!-- Strategy-->
       <section>
+        <h2>Strategy</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -74,7 +75,7 @@
           </li>
         </ul>
       </section>
-      <!-- Примеры работ-->
+      <!-- What are we doing -->
       <section>
         <h2>What are we doing</h2>
         <span> What are we doing</span>
