--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <!-- Header-->
     <header>
       <nav>
-        <a href="./index.html"> WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href=""> Studio</a></li>
+            <a href="">Studio</a></li>
           <li>
-            <a href=""> Portfolio</a></li>
+            <a href="">Portfolio</a></li>
           <li>
-            <a href=""> Contacts</a></li>
+            <a href="">Contacts</a></li>
         </ul>
       </nav>
         <address>
           <ul>
             <li>
-              <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -35,11 +35,8 @@
     <main>
     <!-- Order Service-->
       <section>
-        <div>
-          <h1> Effective Solutions for Your Business</h1>
-          <span> Effective Solutions for Your Business </span>
-        </div> 
-        <button type="button"> Order Service</button>
+          <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
     <!-- Strategy-->
       <section>
@@ -78,7 +75,6 @@
       <!-- What are we doing -->
       <section>
         <h2>What are we doing</h2>
-        <span> What are we doing</span>
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="img-1" width="360">
@@ -93,9 +89,7 @@
       </section>
       <!-- Our Team-->
       <section>
-        <h2>
-            Our Team
-        </h2>
+        <h2>Our Team</h2>
         <ul>
             <li>
                 <img src="./images/Team-card-1.jpg" alt="Team-card-1" width="264" >
@@ -122,10 +116,8 @@
     </main>        
     <!-- Footer-->
     <footer>
-          <a href="./index.html"> WebStudio</a>
-            <span> WebStudio</span>
-          <p>
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          <a href="./index.html">WebStudio</a>
+          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
           </p>
     </footer>
   </body>
