--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- Header-->
+    <!-- перенес папку в локальное хранилище проверка связи -->
     <header>
       <nav>
         <a href="./index.html"> WEB </a>
